# custom-unix-shell

./: README.md  meson.build
include/: meson.build  shs.h
src/: helpers.c  main.c  meson.build  reversi.c  shs.c
